Version 1.8 (Fri Jul 04 2014)
    * Reworked spec file (Olivier Lahaye)
    * Migrated to Qt4 (DongInn Kim)
    * now use external memtest86 binary

Version 1.7 (Tue Feb 13 2007)
    * New release (Eric Fotch)
    * Inital ChangeLog